Error handling and some optimizations